<resources>
    <string name="app_name">Dawdle Todo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="todos">TODOs</string>
    <string name="clock">Clock</string>
    <string name="settings">Settings</string>
    <string name="complete_task">完成任务</string>
    <string name="placeholder">占位符/这玩意不应该出现</string>
    <string name="add_task">确认</string>
    <string name="cancel">取消</string>
    <string name="task_id">任务名称: </string>
    <string name="default_complete_time">0</string>
    <string name="complete_time">完成次数</string>
    <string name="task_description">任务描述</string>
    <string name="priority">初始优先级</string>
    <string name="edit_complete_time"><![CDATA[完成次数，若<=0则为无限次]]></string>
    <string name="begin_date">开始日期/默认今天</string>
    <string name="end_date">结束日期/默认30天后</string>

    <string name="daily_task">日常任务</string>
    <string name="priority_based_task">优先级队列</string>
    <string name="atomic_task">最小任务</string>
    <string name="group_id">任务组名称</string>
    <string name="setting_save_interval">自动保存间隔(秒): </string>
</resources>