<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/task_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_id" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description" />

    <EditText
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priority"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/begin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/begin_date"
        android:inputType="date|datetime" />

    <EditText
        android:id="@+id/end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:inputType="date|datetime" />

    <EditText
        android:id="@+id/complete_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_complete_time"
        />


</LinearLayout>